Fixed overflow issue on smaller screens

--- a/src/components/Heading.scss
+++ b/src/components/Heading.scss
@@ -19,3 +19,9 @@
   margin: auto 16px;
   flex-shrink: 0;
 }
+
+@media (max-width: 500px) {
+  .line {
+    display: none;
+  }
+}
